--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -92,10 +92,6 @@ group:
       dest: .github/ISSUE_TEMPLATE/course-problem-report.md
     - source: .github/ISSUE_TEMPLATE/course-content-add.md
       dest: .github/ISSUE_TEMPLATE/course-content-add.md
-    - source: scripts/make_screenshots.R
-      dest: scripts/make_screenshots.R
-    - source: scripts/git_repo_check.R
-      dest: scripts/git_repo_check.R
     - source: code_of_conduct.md
       dest: code_of_conduct.md
     - source: assets/box_images/
@@ -104,5 +100,10 @@ group:
       dest: assets/style.css
     - source: assets/toc_close.css
       dest: assets/toc_close.css
+    - source: scripts/
+      dest: scripts/
+      deleteOrphaned: true
+    - source: style-sets/fhdasl/
+      dest: style-sets/fhdasl/
     repos: |
       jhudsl/AnVIL_Template
