--- a/.github/workflows/send-updates.yml
+++ b/.github/workflows/send-updates.yml
@@ -22,8 +22,9 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
+          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+          git config --global user.email "itcrtrainingnetwork@gmail.com"
+          git config --global user.name "jhudsl-robot"
 
       - name: Get the version
         id: get_tag
