--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,10 +31,7 @@ jobs:
       # Make the branch fresh
       - name: Make the branch fresh
         run: |
-          echo ${GITHUB_WORKSPACE}
-          echo "$GITHUB_WORKSPACE"
-          echo $GITHUB_WORKSPACE
-          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+          git config --global --add safe.directory ${{GITHUB_WORKSPACE}}
           git config --global user.email "itcrtrainingnetwork@gmail.com"
           git config --global user.name "jhudsl-robot"
 
