--- a/.github/workflows/test-send-updates.yml
+++ b/.github/workflows/test-send-updates.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+          git config --global --add safe.directory $GITHUB_WORKSPACE
           git config --global user.email "itcrtrainingnetwork@gmail.com"
           git config --global user.name "jhudsl-robot"
 
