--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+          git config --global --add safe.directory $GITHUB_WORKSPACE
           git config --global user.email "itcrtrainingnetwork@gmail.com"
           git config --global user.name "jhudsl-robot"
           
