--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --global --add safe.directory ${GITHUB_WORKSPACE}
+          git config --global --add safe.directory $GITHUB_WORKSPACE
           git config --global user.email "itcrtrainingnetwork@gmail.com"
           git config --global user.name "jhudsl-robot"
 
