--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -20,10 +20,10 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --system --add safe.directory "$GITHUB_WORKSPACE"
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
-
+          git config --global --add safe.directory $GITHUB_WORKSPACE
+          git config --global user.email "itcrtrainingnetwork@gmail.com"
+          git config --global user.name "jhudsl-robot"
+          
 ##### Delete Template-specific files that aren't needed for new courses
 
       # Cleanup Template-specific bits
