Add make_book_txt option to render-all

--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -29,6 +29,7 @@ jobs:
       toggle_bookdown: "${{ env.RENDER_BOOKDOWN }}"
       toggle_coursera: "${{ env.RENDER_COURSERA }}"
       toggle_leanpub: "${{ env.RENDER_LEANPUB }}"
+      make_book_txt: "${{ env.MAKE_BOOK_TXT }}"
       rendering_docker_image: "${{ env.RENDERING_DOCKER_IMAGE }}"
       toggle_quiz_check: "${{ env.CHECK_QUIZZES }}"
 
@@ -163,7 +164,7 @@ jobs:
           Rscript -e "ottrpal::bookdown_to_embed_leanpub(
             render = FALSE, \
             chapt_img_key = 'resources/chapt_screen_images/chapter_urls.tsv', \
-            make_book_txt = TRUE, \
+            make_book_txt = ${{needs.yaml-check.outputs.make_book_txt}}, \
             quiz_dir = NULL)"
 
       - name: Run ottrpal::bookdown_to_embed_leanpub
@@ -172,7 +173,7 @@ jobs:
           Rscript -e "ottrpal::bookdown_to_embed_leanpub(
             render = FALSE, \
             chapt_img_key = 'resources/chapt_screen_images/chapter_urls.tsv', \
-            make_book_txt = TRUE)"
+            make_book_txt = ${{needs.yaml-check.outputs.make_book_txt}})"
 
       # Commit the rendered Leanpub files
       - name: Commit rendered Leanpub files
