--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -139,6 +139,7 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
+          git config --global --add safe.directory $GITHUB_WORKSPACE
           git config --local user.email "itcrtrainingnetwork@gmail.com"
           git config --local user.name "jhudsl-robot"
 
@@ -186,8 +187,7 @@ jobs:
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
-          git pull --allow-unrelated-histories --strategy-option=ours
-          git push origin main || echo "No changes to push"
+          git push --force origin main || echo "No changes to push"
 
   render-coursera:
     name: Finish Coursera prep
