--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -140,8 +140,8 @@ jobs:
       - name: Login as jhudsl-robot
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
+          git config --global user.email "itcrtrainingnetwork@gmail.com"
+          git config --global user.name "jhudsl-robot"
 
       # Create screenshots
       - name: Run the screenshot creation
@@ -187,6 +187,7 @@ jobs:
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
+          git fetch 
           git push --force origin main || echo "No changes to push"
 
   render-coursera:
@@ -206,8 +207,9 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
+          git config --global --add safe.directory $GITHUB_WORKSPACE
+          git config --global user.email "itcrtrainingnetwork@gmail.com"
+          git config --global user.name "jhudsl-robot"
 
       # Run Coursera version
       - name: Convert Leanpub quizzes to Coursera
