--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -139,8 +139,9 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
+          git config --global --add safe.directory $GITHUB_WORKSPACE
+          git config --global user.email "itcrtrainingnetwork@gmail.com"
+          git config --global user.name "jhudsl-robot"
 
       # Create screenshots
       - name: Run the screenshot creation
@@ -186,8 +187,7 @@ jobs:
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
-          git pull --allow-unrelated-histories --strategy-option=ours
-          git push origin main || echo "No changes to push"
+          git push --force --set-upstream origin main || echo "No changes to push"
 
   render-coursera:
     name: Finish Coursera prep
@@ -206,8 +206,9 @@ jobs:
 
       - name: Login as jhudsl-robot
         run: |
-          git config --local user.email "itcrtrainingnetwork@gmail.com"
-          git config --local user.name "jhudsl-robot"
+          git config --global --add safe.directory $GITHUB_WORKSPACE
+          git config --global user.email "itcrtrainingnetwork@gmail.com"
+          git config --global user.name "jhudsl-robot"
 
       # Run Coursera version
       - name: Convert Leanpub quizzes to Coursera
@@ -225,5 +226,4 @@ jobs:
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
-          git pull --allow-unrelated-histories --strategy-option=ours
-          git push origin main || echo "No changes to push"
+          git push --force --set-upstream origin main || echo "No changes to push"
