Try committing after the delete

--- a/.github/workflows/render-all.yml
+++ b/.github/workflows/render-all.yml
@@ -156,8 +156,16 @@ jobs:
             --output_dir resources/chapt_screen_images)
 
       # We want a fresh run of the renders each time
-      - name: Delete old manuscript/
-        run: rm -rf manuscript/
+      - name: Delete manuscript/
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
+        run: |
+          rm -rf manuscript/
+          git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
+          git add .
+          git commit -m 'Delete manuscript folder' || echo "No changes to commit"
+          git pull --allow-unrelated-histories --strategy-option=ours
+          git push origin main || echo "No changes to push"
 
       - name: Run ottrpal::bookdown_to_embed_leanpub
         if: needs.yaml-check.outputs.toggle_quiz_check == 'no'
@@ -182,12 +190,12 @@ jobs:
           GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           mkdir -p manuscript
-          git remote set-url origin https://${GH_PAT}@github.com/${GITHUB_REPOSITORY}
           git add --force manuscript/*
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Leanpub' || echo "No changes to commit"
-          git push --force --set-upstream origin main || echo "No changes to push"
+          git pull --allow-unrelated-histories --strategy-option=ours
+          git push origin main || echo "No changes to push"
 
   render-coursera:
     name: Finish Coursera prep
@@ -226,4 +234,5 @@ jobs:
           git add --force resources/*
           git add --force docs/*
           git commit -m 'Render Coursera quizzes' || echo "No changes to commit"
-          git push --force --set-upstream origin main || echo "No changes to push"
+          git pull --allow-unrelated-histories --strategy-option=ours
+          git push origin main || echo "No changes to push"
