--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -54,6 +54,7 @@ group:
       mccoy-lab/hgv_modules
       griffithlab/pVACtools_Intro_Course
       griffithlab/CIVIC_SVI_Course
+      PracticalGenomics/cogaps-on-sciserver
 
 ###ADD NEW REPO HERE following the format above#
 
