Add new repository to sync
Candace,  this is Howard testing out things.

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -54,6 +54,7 @@ group:
       mccoy-lab/hgv_modules
       griffithlab/pVACtools_Intro_Course
       griffithlab/CIVIC_SVI_Course
+      jhudsl/OTTR-Course
 
 ###ADD NEW REPO HERE following the format above#
 
