--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -47,7 +47,7 @@ group:
       fhdsl/NIH_Data_Sharing
       fhdsl/FH_Cluster_Guide
       fhdsl/Using_Leanpub
-      fhdsl/Overleaf_Tutorial
+      fhdsl/Overleaf_and_LaTeX_for_Scientific_Articles
       fhdsl/Design_of_Data_Analysis
       fhdsl/Tools_for_Reproducible_Workflows_in_R
       fhdsl/Introduction_to_reproducible_research
