--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -56,6 +56,7 @@ group:
       griffithlab/CIVIC_SVI_Course
       PracticalGenomics/cogaps-on-sciserver
       fhdsl/AI_for_software
+      griffithlab/Immuno_Workflow_Course
 
 ###ADD NEW REPO HERE following the format above#
 
