Test URL checker by running every 2 mint

--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -2,8 +2,8 @@ name: Periodic URL Check
 
 on:
   schedule:
-    # At 00:00 on Sundays
-    - cron: '0 0 * * 0'
+    # At every 2nd minute
+    - cron: '*/2 * * * *'
 
 jobs:
 
