add C-MOOR_Template to sync.yml (#666)
Co-authored-by: Candace Savonen <cansav09@gmail.com>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -112,3 +112,25 @@ group:
       dest: style-sets/fhdasl/
     repos: |
       jhudsl/AnVIL_Template
+
+  - files:
+    - source: config_automation.yml
+      dest: config_automation.yml
+    - source: .github/workflows/
+      dest: .github/workflows/
+      deleteOrphaned: true
+    - source: .github/switch_sync_repo.R
+      dest: .github/switch_sync_repo.R
+    - source: .github/automatic-issues/
+      dest: .github/automatic-issues/
+    - source: assets/box_images/
+      dest: assets/box_images/
+    - source: assets/style.css
+      dest: assets/style.css
+    - source: assets/toc_close.css
+      dest: assets/toc_close.css
+    - source: scripts/
+      dest: scripts/
+      deleteOrphaned: true
+    repos: |
+      C-MOOR/C-MOOR_Template
