Update sync.yml (#672)
added fhdsl/Intro_to_Command_Line for sync

Co-authored-by: Candace Savonen <cansav09@gmail.com>

--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -57,6 +57,7 @@ group:
       PracticalGenomics/cogaps-on-sciserver
       fhdsl/AI_for_software
       griffithlab/Immuno_Workflow_Course
+      fhdsl/Intro_to_Command_Line
 
 ###ADD NEW REPO HERE following the format above#
 
