Add spacing and indents

--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -6,7 +6,7 @@ on:
     - cron: '*/2 * * * *'
 
 jobs:
-  yaml-check:
+  set-up:
     name: Load user automation choices
     runs-on: ubuntu-latest
     steps:
@@ -14,8 +14,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - name: Delete branch locally and remotely
         run: git push origin --delete preview-${{ github.event.pull_request.number }} || echo "No branch to delete"
+
       - name: Make the branch fresh
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
@@ -27,13 +29,15 @@ jobs:
           git checkout -b $branch_name || echo branch exists
           git push --set-upstream origin $branch_name
         shell: bash
+
   url-check:
     name: Check URLs
-    needs: yaml-check
+    needs: set-up
     if: ${{needs.yaml-check.outputs.toggle_url_check == 'yes'}}
-    uses: jhudsl/ottr-reports/.github/workflows/report-maker.yml@main
-    with:
-      check_type: urls
-      error_min: 0
-      gh_pat: secrets.GH_PAT
 
+    - name: Run the checks
+      uses: jhudsl/ottr-reports/.github/workflows/report-maker.yml@main
+      with:
+        check_type: urls
+        error_min: 0
+        gh_pat: secrets.GH_PAT
