--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -40,7 +40,7 @@ jobs:
   url-check:
     name: Check URLs
     needs: set-up
-    if: ${{needs.yaml-check.outputs.toggle_url_check_periodically == 'yes'}}
+    if: ${{needs.set-up.outputs.toggle_url_check_periodically == 'yes'}}
     uses: jhudsl/ottr-reports/.github/workflows/report-maker.yml@main
     with:
       check_type: urls
