get rid of dash

--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -72,7 +72,7 @@ jobs:
 
     - name: If too many URL errors, then make an issue
       if: ${{ steps.check-report.outputs.error_num <= 1 }}
-    - uses: JasonEtco/create-an-issue@v2
+      uses: JasonEtco/create-an-issue@v2
       with:
         filename: .github/ISSUE_TEMPLATE/url-error.md
       env:
