Make sure its checked out

--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -50,6 +50,11 @@ jobs:
       image: jhudsl/base_ottr:main
 
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+
     - name: Run the check
       uses: jhudsl/ottr-reports@main
       id: check_results
