--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -81,9 +81,14 @@ jobs:
         echo ${{ steps.check-report.outputs.error_num }}
 
     - name: Find issues
+      id: find-issue
+      run: |
+        issue_exists=$(Rscript --vanilla scripts/find_issue.R --repo "$GITHUB_REPOSITORY" --git_pat "$GH_PAT")
+        echo URL issue exists: $issue_exists
+        echo "issue_exists=$issue_exists" >> $GITHUB_OUTPUT
 
     - name: If too many URL errors, then make an issue
-      if: ${{ steps.check-report.outputs.error_num >= 1 && steps.find-issue.outputs.exists == 'false'}}
+      if: ${{ steps.check-report.outputs.error_num >= 1 && steps.find-issue.outputs.issue_exists == 'FALSE'}}
       uses: JasonEtco/create-an-issue@v2
       with:
         filename: .github/ISSUE_TEMPLATE/url-error.md
