--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -58,6 +58,7 @@ group:
       fhdsl/AI_for_software
       griffithlab/Immuno_Workflow_Course
       fhdsl/Intro_to_Command_Line
+      fhdsl/S1_Intro_to_R
 
 ###ADD NEW REPO HERE following the format above#
 
