--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,8 +4,7 @@
 name: Pull Request
 
 on:
-  pull_request_target:
-    types: [opened, edited, reopened]
+  pull_request:
     branches: [ main, staging ]
 
 jobs:
