--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -57,7 +57,9 @@ group:
       PracticalGenomics/cogaps-on-sciserver
       fhdsl/AI_for_software
       griffithlab/Immuno_Workflow_Course
-      fhdsl/Intro_to_Command_Line
+      fhdsl/S1_Intro_to_R
+      fhdsl/S1_Intro_to_Command_Line
+      fhdsl/S1_Intro_to_Git_GitHub
 
 ###ADD NEW REPO HERE following the format above#
 
