--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -85,7 +85,9 @@ jobs:
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
       run: |
-        issue_exists=$(Rscript --vanilla scripts/find_issue.R --repo "$GITHUB_REPOSITORY" --git_pat "$GH_PAT")
+        echo "$GH_PAT"
+        echo "$GITHUB_REPOSITORY"
+        issue_exists=$(Rscript --vanilla scripts/find_issue.R --repo $GITHUB_REPOSITORY --git_pat $GH_PAT)
         echo URL issue exists: $issue_exists
         echo "issue_exists=$issue_exists" >> $GITHUB_OUTPUT
 
