Save session info to a file and archive upload it

--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -90,6 +90,14 @@ jobs:
         echo URL issue exists: $issue_exists
         echo "issue_exists=$issue_exists" >> $GITHUB_OUTPUT
 
+    # We want to retrieve this file after this runs so we can see what spell check errors were detected
+    - name: Archive session info 
+      uses: actions/upload-artifact@v3
+      # These arguments underneath `with` are generally action specific so we have to check the documentation: https://github.com/marketplace/actions/upload-a-build-artifact
+      with:
+        name: session_info.txt
+        path: session_info.txt
+
     - name: If too many URL errors, then make an issue
       if: ${{ steps.check-report.outputs.error_num >= 1 && steps.find-issue.outputs.issue_exists == 'FALSE'}}
       uses: JasonEtco/create-an-issue@v2
