--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -56,6 +56,7 @@ group:
       griffithlab/CIVIC_SVI_Course
       PracticalGenomics/cogaps-on-sciserver
       fhdsl/AI_for_software
+      fhdsl/AI_for_Decision_Makers
       griffithlab/Immuno_Workflow_Course
       fhdsl/S1_Intro_to_R
       fhdsl/S1_Intro_to_Command_Line
