--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -62,6 +62,7 @@ group:
       fhdsl/S1_Intro_to_Command_Line
       fhdsl/S1_Intro_to_Git_GitHub
       fhdsl/WDL_Workflows_Guide
+      fhdsl/S2-Collaborative-Git-GitHub
 
 ###ADD NEW REPO HERE following the format above#
 
