--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -88,18 +88,10 @@ jobs:
         echo "$GITHUB_REPOSITORY"
         issue_exists=$(Rscript --vanilla scripts/find_issue.R --repo $GITHUB_REPOSITORY --git_pat $GH_PAT)
         echo URL issue exists: $issue_exists
-        echo "issue_exists=$issue_exists" >> $GITHUB_OUTPUT
-
-    # We want to retrieve this file after this runs so we can see what spell check errors were detected
-    - name: Archive session info
-      uses: actions/upload-artifact@v3
-      # These arguments underneath `with` are generally action specific so we have to check the documentation: https://github.com/marketplace/actions/upload-a-build-artifact
-      with:
-        name: session_info.txt
-        path: session_info.txt
+        echo "issue_existence=$issue_exists" >> $GITHUB_OUTPUT
 
     - name: If too many URL errors, then make an issue
-      if: ${{ steps.check-report.outputs.error_num >= 1 && steps.find-issue.outputs.issue_exists == true}}
+      if: ${{ steps.check-report.outputs.error_num >= 1 && steps.find-issue.outputs.issue_existence >= 1}}
       uses: JasonEtco/create-an-issue@v2
       with:
         filename: .github/ISSUE_TEMPLATE/url-error.md
