--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -91,7 +91,7 @@ jobs:
         echo "issue_existence=$issue_exists" >> $GITHUB_OUTPUT
 
     - name: If too many URL errors, then make an issue
-      if: ${{ steps.check-report.outputs.error_num >= 1 && steps.find-issue.outputs.issue_existence >= 1}}
+      if: ${{ steps.check-report.outputs.error_num >= 1 && steps.find-issue.outputs.issue_existence == 0}}
       uses: JasonEtco/create-an-issue@v2
       with:
         filename: .github/ISSUE_TEMPLATE/url-error.md
