--- a/.github/workflows/check-url.yml
+++ b/.github/workflows/check-url.yml
@@ -86,7 +86,8 @@ jobs:
       run: |
         echo "$GH_PAT"
         echo "$GITHUB_REPOSITORY"
-        issue_exists=$(Rscript --vanilla scripts/find_issue.R --repo $GITHUB_REPOSITORY --git_pat $GH_PAT)
+        curl -o find_issue.R https://raw.githubusercontent.com/jhudsl/ottr-reports/main/scripts/find-issue.R
+        issue_exists=$(Rscript --vanilla find_issue.R --repo $GITHUB_REPOSITORY --git_pat $GH_PAT)
         echo URL issue exists: $issue_exists
         echo "issue_existence=$issue_exists" >> $GITHUB_OUTPUT
 
