--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           path: bookdown
           token: ${{ secrets.GH_PAT }}
-    
+
       - name: Run git repo check
         id: git_repo_check
         env:
@@ -58,7 +58,8 @@ jobs:
           echo $QUIZ_REPO
 
           # Run repo check script
-          results=$(Rscript --vanilla bookdown/scripts/git_repo_check.R --repo "$GITHUB_REPOSITORY" --git_pat "$GH_PAT")
+          curl -o git_repo_check.R https://raw.githubusercontent.com/jhudsl/ottr-reports/main/scripts/git_repo_check.R
+          results=$(Rscript --vanilla git_repo_check.R --repo "$GITHUB_REPOSITORY" --git_pat "$GH_PAT")
           echo $QUIZ_REPO exists: $results
 
           echo "git_results=$results" >> $GITHUB_OUTPUT
@@ -81,7 +82,7 @@ jobs:
           # Copy over images folder (from bookdown to quizzes repo)
           mkdir -p quizzes/resources/chapt_screen_images
           cp bookdown/resources/chapt_screen_images/* quizzes/resources/chapt_screen_images
-          
+
           # Copy over _bookdown.yml (from bookdown to quizzes repo)
           cp bookdown/_bookdown.yml quizzes/_bookdown.yml
 
