--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -20,10 +20,14 @@ group:
         dest: .github/ISSUE_TEMPLATE/course-problem-report.md
       - source: .github/ISSUE_TEMPLATE/course-content-add.md
         dest: .github/ISSUE_TEMPLATE/course-content-add.md
+      - source: .github/ISSUE_TEMPLATE/url-error.md
+        dest: .github/ISSUE_TEMPLATE/url-error.md
       - source: style-sets
         dest: style-sets
       - source: assets/box_images/
         dest: assets/box_images/
+      - source: resources/exclude_files.txt
+        dest: resources/exclude_files.txt
   # Repositories to receive changes
     repos: |
       jhudsl/Documentation_and_Usability
