--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -67,6 +67,7 @@ group:
       fhdsl/S1_Intro_to_Git_GitHub
       fhdsl/WDL_Workflows_Guide
       fhdsl/S2-Collaborative-Git-GitHub
+      fhdsl/GitHub_Automation_for_Scientists
 
 ###ADD NEW REPO HERE following the format above#
 
