--- a/.github/sync.yml
+++ b/.github/sync.yml
@@ -68,7 +68,7 @@ group:
       fhdsl/WDL_Workflows_Guide
       fhdsl/S2-Collaborative-Git-GitHub
       fhdsl/GitHub_Automation_for_Scientists
-
+          williamtmillsiv/introduction_to_bioinformatics 
 ###ADD NEW REPO HERE following the format above#
       williamtmillsiv/introduction_to_bioinformatics
 
