--- a/.github/workflows/starting-course.yml
+++ b/.github/workflows/starting-course.yml
@@ -18,12 +18,12 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v4
 
-      - name: Login as jhudsl-robot
+      - name: Login as github actions bot
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
-          git config --global user.email "itcrtrainingnetwork@gmail.com"
-          git config --global user.name "jhudsl-robot"
-          
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
 ##### Delete Template-specific files that aren't needed for new courses
 
       # Cleanup Template-specific bits
@@ -60,8 +60,8 @@ jobs:
         id: commit_it
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
-          git config --global user.email "itcrtrainingnetwork@gmail.com"
-          git config --global user.name "jhudsl-robot"
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
           git commit -m "Template cleanup"
           pushed_it=true
